--- a/index.html
+++ b/index.html
@@ -4,49 +4,64 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Grown Up Grows</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="style.css" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     </head>
     <body>
         <header>
-              <div class="logo-top">
-                <div class="image">
-                    <img src="images/GUG-Logo.png" alt="Company Logo" width="200px" height="200px">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#"><img src="assets/GUG-Logo.svg" alt="Grown Up Grows Company Logo" width="120" height="96" class="d-inline-block align-text-top"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Products</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Resources</a>                      
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Us</a>
+                      </li>
+                      <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <div class="signUp"><a class="btn btn-sucess btn-small navbar-btn" href="#">Sign up!</a>
+                            </div>
+                        </li>
+                    </ul>
+                    </ul>
+                  </div>
                 </div>
-                <div class="text">
-                    <h1>Grown Up Grows</h1>
-                </div>
-              </div>
+              </nav>
         </header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Products</a>
-                <a class="nav-item nav-link" href="#">News</a>
-                <a class="nav-item nav-link" href="#">Resources</a>
-                <a class="nav-item nav-link" href="#">About Us</a>
-              </div>
-            </div>
-        </nav>
         <main>
-            <h1>Videos</h1>
-        <table id="videoTable">
-            <tr>
-                <td>
-                    <!--Embedded YouTube Video-->
-                    <iframe width="680" height="445" src="https://www.youtube.com/embed/PvooIsIy6HQ" title="420 SUBSCRIBERS!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </td>
-                <td>
-                    <h4>420 Subscriber YouTube!</h4>
-                    <p>Thanks everyone 420GTGT!</p>
-                </td>
-        </table>
-        <h1>Products</h1>
+            <h1>Welcome to Our New Website!</h1>
+            <p>We specialize in seeds, expertise, and wonderful merchendise.<br>More to come!</p>
+            <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <h3>Sign Up To Our Newsletter</h3>
+            <p><span class="error">*required field</span></p>
+                <label for="email">Email: </label>
+                <input type="text" name="email" id="email" maxLength="50"><span class="error">*</span>
+                <br><br>
+                <input type="submit" value="Submit" onclick="validateForm()">  
+            </form>
+                  </div>
+            <div class="col">
+                <h4>Subscribe To Us On YouTube!</h4>
+                <p>CHECK OUT OUR CHANNEL <a href="https://www.youtube.com/channel/UCkaisk42Q5Ioff9Q0AE2FQg">HERE!</a></p>
+                <iframe width="472" height="266" src="https://www.youtube.com/embed/B081uze0OFI" title="Grown Up Grows" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                </div>
+            </div>
+            <h1>Products</h1>
         <table>
             <tr>
                 <th>Merch</th>
@@ -58,7 +73,7 @@
                     <h2>Ashtray</h2>
                 </td>
                 <td>
-                    <img src="images/ashtray.jpg" class="logoImg" width="100px" height="100px">
+                    <img src="assets/ashtray.jpg" class="logoImg" width="100px" height="100px">
                 </td>
                 <td>
                     <h3>$5.00</h3>
@@ -69,7 +84,7 @@
                     <h2>Lighter</h2>
                 </td>
                 <td>
-                    <img src="images/lighter.png" class="logoImg" width="100px" height="100px">
+                    <img src="assets/lighter.png" class="logoImg" width="100px" height="100px">
                 </td>
                 <td>
                     <h3>$2.50</h3>
@@ -80,20 +95,22 @@
                     <h2>Shirt</h2>
                 </td>
                 <td>
-                    <img src="images/shirt.png" class="logoImg" width="100px" height="100px">
+                    <img src="assets/shirt.png" class="logoImg" width="100px" height="100px">
                 </td>
                 <td>
                     <h3>$10.00</h3>
                 </td>
             </tr>
         </table>
+        <br><br><br>
         </main>
-        <div class="footer"><p>
-            Copyright &copy; <script>document.write(new Date().getFullYear());</script> Grown Up Grows Company<br>All rights reserved.
-        </p></div>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <footer><p>
+            Copyright &copy; <script>document.write(new Date().getFullYear());</script> Grown Up Grows Company<br>All rights reserved.
+        </p></footer>
+        <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     </body>
 </html>
